<?xml version="1.0" encoding="utf-8"?>
<layout>

    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/light_red"
        tools:context=".MoviesActivity">

        <LinearLayout
            android:id="@+id/llSort"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_14sdp"
            android:layout_marginTop="@dimen/_10sdp"
            android:layout_marginEnd="@dimen/_14sdp"
            android:orientation="vertical"
            android:visibility="gone">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:weightSum="2">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/movie_name"
                    android:textColor="@color/red"
                    android:textSize="@dimen/_12sdp" />

                <TextView
                    android:id="@+id/txtAToZ"
                    style="@style/textViewStyle"
                    android:layout_marginLeft="@dimen/_20sdp"
                    android:clickable="true"
                    android:focusable="true"
                    android:foreground="?android:attr/selectableItemBackground"
                    android:text="@string/a_z" />

                <TextView
                    android:id="@+id/txtZToA"
                    style="@style/textViewStyle"
                    android:clickable="true"
                    android:focusable="true"
                    android:foreground="?android:attr/selectableItemBackground"
                    android:text="@string/z_a" />


            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_5sdp"
                android:orientation="horizontal"
                android:weightSum="2">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/date"
                    android:textColor="@color/red"
                    android:textSize="@dimen/_12sdp" />

                <TextView
                    android:id="@+id/txtDateAsc"
                    style="@style/textViewStyle"
                    android:layout_marginLeft="@dimen/_20sdp"
                    android:clickable="true"
                    android:focusable="true"
                    android:foreground="?android:attr/selectableItemBackground"
                    android:text="@string/date_asc" />

                <TextView
                    android:id="@+id/txtDateDesc"
                    style="@style/textViewStyle"
                    android:clickable="true"
                    android:focusable="true"
                    android:foreground="?android:attr/selectableItemBackground"
                    android:text="@string/date_desc" />


            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_5sdp"
                android:orientation="horizontal"
                android:weightSum="2">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/rating"
                    android:textColor="@color/red"
                    android:textSize="@dimen/_12sdp" />

                <TextView
                    android:id="@+id/txtRatingAsc"
                    style="@style/textViewStyle"
                    android:layout_marginLeft="@dimen/_20sdp"
                    android:clickable="true"
                    android:focusable="true"
                    android:foreground="?android:attr/selectableItemBackground"
                    android:text="@string/rating_asc" />

                <TextView
                    android:id="@+id/txtRatingDesc"
                    style="@style/textViewStyle"
                    android:clickable="true"
                    android:focusable="true"
                    android:foreground="?android:attr/selectableItemBackground"
                    android:text="@string/rating_desc" />

            </LinearLayout>

        </LinearLayout>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rvMovieList"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_below="@+id/llSort"
            android:layout_marginTop="@dimen/_10sdp"
            android:clipToPadding="false"
            android:padding="@dimen/_10sdp"
            tools:listitem="@layout/raw_movie" />

        <com.google.android.material.progressindicator.LinearProgressIndicator
            android:id="@+id/progress"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:layout_marginStart="@dimen/_15sdp"
            android:layout_marginEnd="@dimen/_15sdp"
            android:indeterminate="true"
            android:visibility="gone" />

    </RelativeLayout>

</layout>